Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redactor-plugins",
+  "name": "redactor2-plugins",
   "version": "1.0.0",
   "description": "Redactor II is advanced, clean and smooth Rich Text Editor. It offers an excellent immersive user experience. Small and robust, Redactor is favorite choice for thousands of professional developers worldwide.",
   "main": "",
